# seacord-effective-c

./: CMakeLists.txt
01/: hello.c
02/: align.c  static.c  swap.c  swap_test.c
